# contract-template

./: Cargo.toml  README.md
src/: contract.rs
